<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24px"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category_24px"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_print_24px"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/settingFragment2"
            android:icon="@drawable/ic_settings_24px__1_"
            android:title="@string/settingFragment2"/>
        <item
            android:id="@+id/contactFragment"
            android:icon="@drawable/ic_contact_page_24px"
            android:title="@string/contactFragment"/>
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_info_24px"
            android:title="@string/aboutFragment"/>
    </group>

</menu>