<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.categories.CategoriesFragment">

    <Button
        android:id="@+id/btn_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_income"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@drawable/roundcorner2"
        android:backgroundTint="#8A50B3"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_expense"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:background="@drawable/roundcorner2"
        android:backgroundTint="#8A50B3"
        app:layout_constraintTop_toBottomOf="@id/btn_income"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cash"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:background="@drawable/roundcorner2"
        android:backgroundTint="#8A50B3"
        app:layout_constraintTop_toBottomOf="@+id/btn_expense"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>