<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.report.ReportFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_report_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#8A50B3">

        <TextView
            android:id="@+id/report1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report1"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_report_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/card_report_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#8A50B3">

        <TextView
            android:id="@+id/report2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report2"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_report_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/card_report_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#8A50B3">

        <TextView
            android:id="@+id/report3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report3"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_report_4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/card_report_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#8A50B3">

        <TextView
            android:id="@+id/report4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report4"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_report_5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/card_report_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#8A50B3">

        <TextView
            android:id="@+id/report5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report5"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_report_6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/card_report_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#8A50B3">

        <TextView
            android:id="@+id/report6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report6"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_report_7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/card_report_6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#8A50B3">

        <TextView
            android:id="@+id/report7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report7"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_report_8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/card_report_7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#8A50B3">

        <TextView
            android:id="@+id/report8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report8"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

    </androidx.cardview.widget.CardView>
    
</androidx.constraintlayout.widget.ConstraintLayout>