<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#8A50B3"
    android:layout_margin="10dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txt_date"/>

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/date"/>

    <TextView
        android:id="@+id/category"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txt_category"/>

    <TextView
        android:id="@+id/txt_category"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/txt_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/category"/>

    <TextView
        android:id="@+id/cash"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/cash"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/category"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txt_cash"/>

    <TextView
        android:id="@+id/txt_cash"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/txt_category"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cash"/>

    <TextView
        android:id="@+id/amount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/cash"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txt_amount"/>

    <TextView
        android:id="@+id/txt_amount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/txt_cash"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/amount"/>

    <TextView
        android:id="@+id/remark"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/remark"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txt_remark"/>

    <TextView
        android:id="@+id/txt_remark"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/txt_amount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/amount"/>

</androidx.constraintlayout.widget.ConstraintLayout>